--- a/src/WisataKuliner.html
+++ b/src/WisataKuliner.html
@@ -155,10 +155,12 @@
                         <div id="amarta2" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.2303081778996!2d112.52380661477868!3d-7.87095259432923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7880cc98ace265%3A0x814879a4d6aa759e!2sPos%20Ketan%20Legenda%20-%201967!5e0!3m2!1sid!2sid!4v1635415666793!5m2!1sid!2sid"
-                                    width="600" height="450" style="border:0;" allowfullscreen=""
-                                    loading="lazy"></iframe>
+                                <div class="iframe">
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.2303081778996!2d112.52380661477868!3d-7.87095259432923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7880cc98ace265%3A0x814879a4d6aa759e!2sPos%20Ketan%20Legenda%20-%201967!5e0!3m2!1sid!2sid!4v1635415666793!5m2!1sid!2sid"
+                                        width="600" height="450" style="border:0;" allowfullscreen=""
+                                        loading="lazy"></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
